--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageButton"
+        android:id="@+id/ivGoBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:rotation="180"
