--- a/app/src/main/res/layout/activity_lock_and_unlock.xml
+++ b/app/src/main/res/layout/activity_lock_and_unlock.xml
@@ -32,9 +32,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,9 +43,9 @@
 
             <!-- Media -->
             <ImageView
-                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
+                android:layout_marginTop="8dp"
                 android:contentDescription="lorum ipsum lorum ipsum"
                 app:srcCompat="@drawable/lock" />
 
@@ -107,7 +107,17 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-
+    <Button
+        android:id="@+id/btnDelay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.897" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
