--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,91 +7,170 @@
     android:layout_margin="20dp"
     tools:context=".RegisterActivity">
 
+    <ImageView
+        android:id="@+id/ivGoBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rotation="180"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24" />
 
-    //email
-
-    <com.google.android.material.textfield.TextInputLayout
-        app:boxStrokeColor="@color/myYellow"
-        app:hintTextColor="@color/myYellow"
-        android:id="@+id/etEmailRegister"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconContentDescription=""
-        app:startIconDrawable="@drawable/ic_baseline_assignment_ind_24">>
+        app:layout_constraintVertical_bias="0.75">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:textColorHighlight="@color/myYellow"
-            android:textColorLink="@color/myYellow"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etFirstName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress" />
+            android:hint="First Name"
+            app:boxStrokeColor="@color/myYellow"
+            app:hintTextColor="@color/myYellow"
 
-    </com.google.android.material.textfield.TextInputLayout>
+            app:startIconContentDescription=""
+            app:startIconDrawable="@drawable/ic_baseline_assignment_ind_24">>
 
-    //password
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textColorHighlight="@color/myYellow"
+                android:textColorLink="@color/myYellow" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        app:boxStrokeColor="@color/myYellow"
-        app:hintTextColor="@color/myYellow"
-        android:id="@+id/etPasswordRegister"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        app:endIconMode="password_toggle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"
-        app:layout_constraintVertical_bias="0.125"
-        app:startIconContentDescription=""
-        app:startIconDrawable="@drawable/ic_baseline_lock_24">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:textColorHighlight="@color/myYellow"
-            android:textColorLink="@color/myYellow"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etLastName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="Last Name"
+            app:boxStrokeColor="@color/myYellow"
+            app:hintTextColor="@color/myYellow"
+
+            app:startIconContentDescription=""
+            app:startIconDrawable="@drawable/ic_baseline_assignment_ind_24">>
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textColorHighlight="@color/myYellow"
+                android:textColorLink="@color/myYellow" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        //email
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etEmailRegister"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            app:boxStrokeColor="@color/myYellow"
+            app:hintTextColor="@color/myYellow"
+
+            app:startIconContentDescription=""
+            app:startIconDrawable="@drawable/ic_email">>
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textColorHighlight="@color/myYellow"
+                android:textColorLink="@color/myYellow" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        //password
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etPasswordRegister"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            app:boxStrokeColor="@color/myYellow"
+            app:endIconMode="password_toggle"
+            app:hintTextColor="@color/myYellow"
+
+            app:startIconContentDescription=""
+            app:startIconDrawable="@drawable/ic_baseline_lock_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColorHighlight="@color/myYellow"
+                android:textColorLink="@color/myYellow" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etConfirmPasswordRegister"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Confirm password"
+            app:boxStrokeColor="@color/myYellow"
+            app:endIconMode="password_toggle"
+            app:hintTextColor="@color/myYellow"
+
+            app:startIconContentDescription=""
+            app:startIconDrawable="@drawable/ic_baseline_lock_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColorHighlight="@color/myYellow"
+                android:textColorLink="@color/myYellow" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <Button
+            android:id="@+id/btnRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/myBlue"
+            android:text="confirm"
+            android:textColorHighlight="#009688"
+            android:textColorLink="#009688"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tvSignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="272dp"
+        android:layout_marginBottom="256dp"
         android:text="Register now"
-        android:textStyle="bold"
         android:textColor="#000000"
         android:textColorHighlight="#FFFFFF"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etEmailRegister"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/myBlue"
-        android:text="confirm"
-        android:textColorHighlight="#009688"
-        android:textColorLink="#009688"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.03" />
 
     <TextView
         android:id="@+id/tvLoggedIn"
@@ -103,18 +182,18 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.897" />
+        app:layout_constraintVertical_bias="0.934" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="154dp"
+        android:layout_height="149dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.177"
+        app:layout_constraintVertical_bias="0.116"
         app:srcCompat="@drawable/profile" />
 
 
