--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shadowColor="#FFFFFF"
-        android:text="Locked "
+        android:text="Locked"
         android:textColor="@color/myYellow"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -60,7 +60,6 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mouhib Sahloul"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -127,5 +126,18 @@
         app:layout_constraintVertical_bias="0.077"
         app:srcCompat="@drawable/ic_notifications" />
 
+    <ImageView
+        android:id="@+id/ivCall"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:rotation="360"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.077"
+        app:srcCompat="@drawable/ic_baseline_call_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
