--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -51,7 +51,7 @@
         app:layout_constraintVertical_bias="0.133" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etEmailRegister"
+        android:id="@+id/etOldPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
     //password
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etPasswordRegister"
+        android:id="@+id/etNewPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -91,7 +91,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"
+        app:layout_constraintTop_toBottomOf="@+id/etOldPassword"
         app:layout_constraintVertical_bias="0.025"
         app:startIconContentDescription=""
         app:startIconDrawable="@drawable/ic_baseline_lock_24">
@@ -117,7 +117,7 @@
         app:layout_constraintVertical_bias="0.422" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm"
