--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,6 @@ android:layout_height="match_parent"
         tools:context=".RegisterActivity">
 
 
-
         <ImageView
             android:id="@+id/ivGoBack"
             android:layout_width="wrap_content"
@@ -33,13 +32,13 @@ android:layout_height="match_parent"
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75">
+            app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etFirstName"
@@ -156,7 +155,7 @@ android:layout_height="match_parent"
 
             <Button
                 android:id="@+id/btnRegister"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
@@ -200,12 +199,11 @@ android:layout_height="match_parent"
             android:id="@+id/imageView3"
             android:layout_width="154dp"
             android:layout_height="149dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.116"
+            app:layout_constraintTop_toBottomOf="@+id/tvSignin"
             app:srcCompat="@drawable/profile" />
 
 
